--- a/mylogin-one/mylogin-one/src/app/LoginForm.form
+++ b/mylogin-one/mylogin-one/src/app/LoginForm.form
@@ -51,6 +51,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="username">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+      </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="80" y="270" width="150" height="-1"/>
