--- a/mylogin-one/mylogin-one/src/app/InicioAsesor.form
+++ b/mylogin-one/mylogin-one/src/app/InicioAsesor.form
@@ -162,13 +162,13 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTextArea" name="txaMessageC">
+        <Component class="javax.swing.JTextArea" name="txaConversacionAsesor">
           <Properties>
             <Property name="columns" type="int" value="10"/>
             <Property name="rows" type="int" value="5"/>
           </Properties>
           <Events>
-            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txaMessageCKeyTyped"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txaConversacionAsesorKeyTyped"/>
           </Events>
         </Component>
       </SubComponents>
